--- a/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
+++ b/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserConnection.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserConnection.Designer.cs">
+      <DependentUpon>UserConnection.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
