Revert "#: Auto stash before merge of "AndroidApp" and "origin/AndroidApp""
This reverts commit 830280b623e90caf359b5dbad989c0d71038a771.

--- a/PiaGOApp/app/src/main/AndroidManifest.xml
+++ b/PiaGOApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.piago" >
+    package="com.example.piago">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -19,12 +19,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name="com.internationalproject.piago.PlayPiago"></activity>
-        <activity android:name="com.internationalproject.piago.BluetoothActivity" />
-        <activity android:name="com.internationalproject.piago.PiagoMainScreen" />
-        <activity android:name="com.internationalproject.piago.MainActivity">
         <activity android:name=".BTCommunication"></activity>
+        <activity android:name=".PlayPiago" />
+        <activity android:name=".BluetoothActivity" />
+        <activity android:name=".PiagoMainScreen" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
