--- a/PiaGOApp/app/src/main/AndroidManifest.xml
+++ b/PiaGOApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.piago">
+    package="com.interproject.piago">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -19,12 +19,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BTCommunication"></activity>
-        <activity android:name=".PlayPiago"
+        <activity android:name="com.interproject.piago.BTCommunication"></activity>
+        <activity android:name="com.interproject.piago.PlayPiago"
             android:screenOrientation="landscape"/>
-        <activity android:name=".BluetoothActivity" />
-        <activity android:name=".PiagoMainScreen" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.interproject.piago.BluetoothActivity" />
+        <activity android:name="com.interproject.piago.PiagoMainScreen" />
+        <activity android:name="com.interproject.piago.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
