First accomplishment: Blootoot plays sound

--- a/PiaGo_CSharp/PiaGo_Master/Midi/Midi.csproj
+++ b/PiaGo_CSharp/PiaGo_Master/Midi/Midi.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Clock.cs" />
     <Compile Include="Control.cs" />
     <Compile Include="DeviceBase.cs" />
+    <Compile Include="ExampleBase.cs" />
+    <Compile Include="ExampleUtil.cs" />
     <Compile Include="Instrument.cs" />
     <Compile Include="Interval.cs" />
     <Compile Include="Note.cs" />
