--- a/PiaGOApp/app/src/main/AndroidManifest.xml
+++ b/PiaGOApp/app/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <permission android:name="android.permission.BLUETOOTH" android:label="BLUETOOTH" />
+    <permission
+        android:name="android.permission.BLUETOOTH"
+        android:label="BLUETOOTH" />
     <permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -19,12 +21,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.interproject.piago.BTCommunication"></activity>
-        <activity android:name="com.interproject.piago.PlayPiago"
-            android:screenOrientation="landscape"/>
-        <activity android:name="com.interproject.piago.BluetoothActivity" />
-        <activity android:name="com.interproject.piago.PiagoMainScreen" />
-        <activity android:name="com.interproject.piago.MainActivity">
+        <activity android:name=".TestMidiDriver"></activity>
+        <activity android:name=".BTCommunication" />
+        <activity
+            android:name=".PlayPiago"
+            android:screenOrientation="landscape" />
+        <activity android:name=".BluetoothActivity" />
+        <activity android:name=".PiagoMainScreen" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
