--- a/PiaGOApp/app/src/main/AndroidManifest.xml
+++ b/PiaGOApp/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestMidiDriver"></activity>
+        <activity android:name=".TestMidiActivity"></activity>
+        <activity android:name=".TestMidiDriver" />
         <activity android:name=".BTCommunication" />
         <activity
             android:name=".PlayPiago"
