--- a/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
+++ b/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
@@ -100,5 +100,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Midi\Midi.csproj">
+      <Project>{f60d8b7b-2d2e-4b94-a736-3783ffe1a25c}</Project>
+      <Name>Midi</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
