--- a/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
+++ b/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="InTheHand.Net.Personal, Version=3.5.605.0, Culture=neutral, PublicKeyToken=ea38caa273134499, processorArchitecture=MSIL">
+      <HintPath>..\packages\32feet.NET.3.5.0.0\lib\net\InTheHand.Net.Personal.dll</HintPath>
+    </Reference>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.dll</HintPath>
     </Reference>
@@ -56,6 +59,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlackKey.cs" />
+    <Compile Include="Bluetooth.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Bluetooth.Designer.cs">
+      <DependentUpon>Bluetooth.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +96,9 @@
       <DependentUpon>UserConnection.cs</DependentUpon>
     </Compile>
     <Compile Include="WhiteKey.cs" />
+    <EmbeddedResource Include="Bluetooth.resx">
+      <DependentUpon>Bluetooth.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
