--- a/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
+++ b/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
@@ -65,6 +65,8 @@
     </Compile>
     <Compile Include="Key.cs" />
     <Compile Include="L_Key.cs" />
+    <Compile Include="NoteScheduler.cs" />
+    <Compile Include="PianoKey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RL_Key.cs" />
