Functionality On/Off Button, OctaveButtons, Songlist, Previewsong
preview still bugged

--- a/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
+++ b/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
@@ -64,6 +64,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Key.cs" />
+    <Compile Include="LearnHandler.cs" />
     <Compile Include="L_Key.cs" />
     <Compile Include="NoteScheduler.cs" />
     <Compile Include="PianoKey.cs" />
