No more hardcoded songfile selection

--- a/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
+++ b/PiaGo_CSharp/PiaGo_Master/PiaGo_CSharp/PiaGo_CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Key.cs" />
     <Compile Include="LearnHandler.cs" />
     <Compile Include="L_Key.cs" />
+    <Compile Include="MidiFileHandler.cs" />
     <Compile Include="NoteScheduler.cs" />
     <Compile Include="PianoKey.cs" />
     <Compile Include="Program.cs" />
